syntax = "proto3";
option java_package = "com.ptworldcup.teams";

package teams;

service Teams {
  rpc GetTeams (GetTeamsRequest) returns (GetTeamsResponse);
}

message GetTeamsRequest {
}

message GetTeamsResponse {
  repeated Team teams = 1;
}

message Team {
  string id = 1;
  string name = 2;
  string color = 3;
}